tests/compile-fail/integration__integration__type_check__jumps.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:14
   │
27 │     if (2 == 3.0) goto label;
   │         - -- ^^^ a float
   │         │ │   
   │         │ same types required by this
   │         an integer

error: type error
   ┌─ <input>:32:9
   │
32 │     if (3.0) goto label;
   │         ^^^ a float
   │
   = an integer is required

error: type error
   ┌─ <input>:38:14
   │
38 │     if (2 && 3.0) goto label1;
   │         - -- ^^^ a float
   │         │ │   
   │         │ same types required by this
   │         an integer

error: type error
   ┌─ <input>:41:9
   │
41 │     if (2.0 && 3.0) goto label2;
   │         ^^^ -- expects an integer
   │         │    
   │         a float

error: type error
   ┌─ <input>:46:11
   │
46 │     if (--F0) goto label;
   │         --^^ a float
   │         │  
   │         expects an integer


